change of file names to index and stlyles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mediterranean</title>
-	<link rel="stylesheet" type="text/css" href="medi.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <header>
@@ -75,23 +75,5 @@
 
 
 
-<section id="ourMenu">
-	<h3 class="first">Our Menu</h3>
-	
-	<div class="penne">
-		<img src="penee.jpg">
-	</div>
-
-	<div class="menu">
-		<p class="second">mediterranean Penne <br>	$1145 <br>
-			Sphaghetti Pamodoro <br>$11.45 <br>
-			Seafood Portofino <br>$13.95 <br>
-			Atlantic Salmon <br>$12.95 <br>
-			Bolognesa Pasta <br>$11.45 <br>
-			Tuscan Garlic chicken <br>$11.45 <br>
-			Macaroni & Cheese <br>$11.45</p>
-		<button class="third"><a href="#">View Full Menu</a></button>
-	</div>
-</section>
 </body>
 </html>
